pequeños cambios eliminando comentarios innecesarios, eliminando variables sin usar, imports sin usar, etc